--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ngxs/logger-plugin": "^3.8.1",
+    "@ngxs/store": "^3.8.1",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^15.0.0",
